--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.2</version>
-      <!-- <scope>test</scope> -->
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -115,14 +115,13 @@
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>2.3.4</version>
+          <version>2.3.6</version>
           <extensions>true</extensions>
           <configuration>
             <instructions>
               <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
               <Bundle-Vendor>fasterml.com</Bundle-Vendor>
               <Import-Package>
-com.fasterxml.jackson.annotation
 </Import-Package>
               <Private-Package>
 </Private-Package>
