Add version info back, enable test

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
   </dependencies>
 
   <build>
+    <!--  need to enable filtering to add version info -->
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>  
+    </resources>
+  
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
