--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
                     <encoding>UTF-8</encoding>
                     <maxmemory>512m</maxmemory>
                     <links>
-                        <link>http://java.sun.com/javase/6/docs/api/</link>
+                        <link>http://docs.oracle.com/javase/6/docs/api/</link>
                     </links>
                 </configuration>
                 <executions>
