--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,9 @@ com.fasterxml.jackson.core.util
               <encoding>UTF-8</encoding>
               <maxmemory>1g</maxmemory>
               <links>
-                  <link>http://java.sun.com/javase/6/docs/api/</link>
+                  <!-- JDK, other Jackson pkgs -->
+                  <link>http://docs.oracle.com/javase/6/docs/api/</link>
+                  <link>http://fasterxml.github.com/jackson-core/javadoc/2.0.0/</link>
               </links>
               <excludePackageNames>${javadoc.package.exclude}</excludePackageNames>
               <bootclasspath>${sun.boot.class.path}</bootclasspath>
