--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>com.fasterxml</groupId>
     <artifactId>oss-parent</artifactId>
-    <version>2-SNAPSHOT</version>
+    <version>3-SNAPSHOT</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
@@ -42,7 +42,8 @@
     <!--
      | Configuration properties for the OSGi maven-bundle-plugin
     -->
-    <osgi.export>${project.groupId}.*;version=${project.version}</osgi.export>
+    <osgi.export>com.fasterxml.jackson.core;version=${project.version},
+com.fasterxml.jackson.core.*;version=${project.version}</osgi.export>
   </properties>
 
   <dependencies>
