--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
     <osgi.export>com.fasterxml.jackson.core;version=${project.version},
 com.fasterxml.jackson.core.*;version=${project.version}
     </osgi.export>
+    <version.template.dir>src/main/java/com/fasterxml/jackson/core/json</version.template.dir>
+    <version.template.file>${version.template.dir}/PackageVersion.java.in</version.template.file>
+    <version.file>${version.template.dir}/PackageVersion.java</version.file>
+    <version.package>${project.groupId}.json</version.package>
   </properties>
 
   <dependencies>
@@ -85,6 +89,41 @@ com.fasterxml.jackson.core.*;version=${project.version}
                 <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
             </configuration>
         </plugin>
+      <plugin>
+        <groupId>com.google.code.maven-replacer-plugin</groupId>
+            <artifactId>maven-replacer-plugin</artifactId>
+            <version>1.4.0</version>
+            <executions>
+                <execution>
+                    <phase>process-sources</phase>
+                    <goals>
+                        <goal>replace</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <file>${version.template.file}</file>
+                <outputFile>${version.file}</outputFile>
+                <replacements>
+                    <replacement>
+                        <token>@package@</token>
+                        <value>${version.package}</value>
+                    </replacement>
+                    <replacement>
+                        <token>@projectversion@</token>
+                        <value>${project.version}</value>
+                    </replacement>
+                    <replacement>
+                        <token>@projectgroupid@</token>
+                        <value>${project.groupId}</value>
+                    </replacement>
+                    <replacement>
+                        <token>@projectartifactid@</token>
+                        <value>${project.artifactId}</value>
+                    </replacement>
+                </replacements>
+            </configuration>
+      </plugin>
     </plugins>
     <extensions>
         <!-- Enabling the use of SSH -->
