--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.fasterxml</groupId>
     <artifactId>oss-parent</artifactId>
-    <version>4</version>
+    <version>5-SNAPSHOT</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
@@ -28,10 +28,10 @@
     <osgi.export>com.fasterxml.jackson.core;version=${project.version},
 com.fasterxml.jackson.core.*;version=${project.version}
     </osgi.export>
-    <version.template.dir>src/main/java/com/fasterxml/jackson/core/json</version.template.dir>
-    <version.template.file>${version.template.dir}/PackageVersion.java.in</version.template.file>
-    <version.file>${version.template.dir}/PackageVersion.java</version.file>
-    <version.package>${project.groupId}.json</version.package>
+
+    <!-- Generate PackageVersion.java into this directory. -->
+    <packageVersion.dir>src/main/java/com/fasterxml/jackson/core/json</packageVersion.dir>
+    <packageVersion.package>com.fasterxml.jackson.core.json</packageVersion.package>
   </properties>
 
   <dependencies>
@@ -90,39 +90,15 @@ com.fasterxml.jackson.core.*;version=${project.version}
             </configuration>
         </plugin>
       <plugin>
+        <!-- Inherited from oss-base. Generate PackageVersion.java.-->
         <groupId>com.google.code.maven-replacer-plugin</groupId>
-            <artifactId>maven-replacer-plugin</artifactId>
-            <version>1.4.0</version>
-            <executions>
-                <execution>
-                    <phase>process-sources</phase>
-                    <goals>
-                        <goal>replace</goal>
-                    </goals>
-                </execution>
-            </executions>
-            <configuration>
-                <file>${version.template.file}</file>
-                <outputFile>${version.file}</outputFile>
-                <replacements>
-                    <replacement>
-                        <token>@package@</token>
-                        <value>${version.package}</value>
-                    </replacement>
-                    <replacement>
-                        <token>@projectversion@</token>
-                        <value>${project.version}</value>
-                    </replacement>
-                    <replacement>
-                        <token>@projectgroupid@</token>
-                        <value>${project.groupId}</value>
-                    </replacement>
-                    <replacement>
-                        <token>@projectartifactid@</token>
-                        <value>${project.artifactId}</value>
-                    </replacement>
-                </replacements>
-            </configuration>
+        <artifactId>replacer</artifactId>
+        <executions>
+          <execution>
+            <id>process-packageVersion</id>
+            <phase>generate-sources</phase>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
     <extensions>
