--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>2.2.0-rc1-SNAPSHOT</version>
   <description>Core Jackson abstractions, basic JSON streaming API implementation
   </description>
 
