--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>2.2.0</version>
   <description>Core Jackson abstractions, basic JSON streaming API implementation
   </description>
 
@@ -18,7 +18,7 @@
     <connection>scm:git:git@github.com:FasterXML/jackson-core.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-core.git</developerConnection>
     <url>http://github.com/FasterXML/jackson-core</url>    
-    <tag>jackson-core-2.2.0</tag>
+    <tag>jackson-core-2.2.0b</tag>
   </scm>
 
   <properties>
