--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.fasterxml</groupId>
     <artifactId>oss-parent</artifactId>
-    <version>9</version>
+    <version>10</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
@@ -18,7 +18,7 @@
     <connection>scm:git:git@github.com:FasterXML/jackson-core.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-core.git</developerConnection>
     <url>http://github.com/FasterXML/jackson-core</url>    
-    <tag>jackson-core-2.2.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
