--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,23 @@ com.fasterxml.jackson.core.*;version=${project.version}
                 <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
             </configuration>
         </plugin>
+
+      <!-- May want to configure debug info -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <optimize>true</optimize>
+          <!-- 13-Dec-2013, tatu: For 2.3, minimized size; for 2.4+ may change settings
+            -->
+          <debug>true</debug>
+          <debuglevel>lines,source</debuglevel>
+<!--
+          <debuglevel>lines,source,vars</debuglevel>
+-->
+        </configuration>
+      </plugin>
+
       <plugin>
         <!-- Inherited from oss-base. Generate PackageVersion.java.-->
         <groupId>com.google.code.maven-replacer-plugin</groupId>
