--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.3.1-SNAPSHOT</version>
+  <version>2.4.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Core Jackson abstractions, basic JSON streaming API implementation
   </description>
@@ -23,7 +23,8 @@
   </scm>
 
   <properties>
-    <javac.debuglevel>lines,source</javac.debuglevel>
+    <!-- for 2.4, includes full debug info -->
+    <javac.debuglevel>lines,source,vars</javac.debuglevel>
     <!--
      | Configuration properties for the OSGi maven-bundle-plugin
     -->
