--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,6 @@
   </scm>
 
   <properties>
-    <!--
-     | Configuration properties for the OSGi maven-bundle-plugin
-    -->
     <osgi.export>com.fasterxml.jackson.core;version=${project.version},
 com.fasterxml.jackson.core.*;version=${project.version}
     </osgi.export>
@@ -42,8 +39,8 @@ com.fasterxml.jackson.core.*;version=${project.version}
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>2.8.1</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>${javac.src.version}</source>
+            <target>${javac.target.version}</target>
             <encoding>UTF-8</encoding>
             <maxmemory>512m</maxmemory>
             <links>
@@ -51,13 +48,13 @@ com.fasterxml.jackson.core.*;version=${project.version}
             </links>
           </configuration>
           <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
+            <execution>
+              <id>attach-javadocs</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
           </executions>
       </plugin>
       <plugin>
