--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion> 
   <parent>
-    <groupId>com.fasterxml</groupId>
+    <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-parent</artifactId>
     <version>2.4-SNAPSHOT</version>
   </parent>
@@ -29,7 +29,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
 
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/core/json</packageVersion.dir>
-    <packageVersion.package>${project.groupdId}.json</packageVersion.package>
+    <packageVersion.package>${project.groupId}.json</packageVersion.package>
   </properties>
 
   <build>
