--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ branches:
 env:
   global:
     - secure: "YW0hrdsHvH41pb5uPJ2DGzXrBgOVT7nEyag/bAQoDcSlOQ/g55tnY6rIGkqE/aYD47IroTEhW4yLyM3tZpbrqwagX4dUX90ukjcUwUvFE1ePTSEfdBtuHVwl8f6HmLIIw2yK0dQ1gOJ21T+3g+wddvK+6sWBJJ+s3O1FePDh6X0="
-    - secure: "sGQxvyfg98BFcJcWHQ5BjvDNhbwdgD1yEfkE3qzH4/gzwD/ND1jKhkCX++Glt3DuyAKhENNzXlSkztdCE5wKfK3X6MVvOgzMgiV/BhHIf09EtAjZ35fe4pr+GZImfGZO3qkViooTz3FDJyKJBA3YyMTuo9/eWK8HlUFCZHTjKP8="    - secure: "TcqHoZGVltQmVg84YupPXT1CeOoE6g17P1Nj72E1lX4hm3C+a1VdI67IZOdwTZgi6tKK2dlHCLPjy9tsNkXzJMZ/noUBEJgr1dbjvWcMjT8KRfvcD6DaiivGDb0IUpexhETeWv8tgS1UBbdYBkp14gTMXyM+n6uy6d/YRi88ZUc="
+    - secure: "sGQxvyfg98BFcJcWHQ5BjvDNhbwdgD1yEfkE3qzH4/gzwD/ND1jKhkCX++Glt3DuyAKhENNzXlSkztdCE5wKfK3X6MVvOgzMgiV/BhHIf09EtAjZ35fe4pr+GZImfGZO3qkViooTz3FDJyKJBA3YyMTuo9/eWK8HlUFCZHTjKP8="
 
