--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,16 @@ com.fasterxml.jackson.core.*;version=${project.version}
 
   <build>
     <plugins>
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${surefire.version}</version>
+        <configuration>
+          <excludes>
+            <exclude>failing/*.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>    
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
