--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>jackson-core</artifactId>
   <packaging>bundle</packaging>
   <name>Jackson-core</name>
-  <version>2.2.4-SNAPSHOT</version>
+  <version>2.2.4</version>
   <description>Core Jackson abstractions, basic JSON streaming API implementation
   </description>
 
@@ -19,7 +19,7 @@
     <connection>scm:git:git@github.com:FasterXML/jackson-core.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-core.git</developerConnection>
     <url>http://github.com/FasterXML/jackson-core</url>    
-    <tag>HEAD</tag>
+    <tag>jackson-core-2.2.4</tag>
   </scm>
 
   <properties>
