--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-parent</artifactId>
-    <version>2.7.0-rc1</version>
+    <version>2.7</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
