--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.7.0-rc4-SNAPSHOT</version>
+  <version>2.7.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Core Jackson abstractions, basic JSON streaming API implementation</description>
   <inceptionYear>2008</inceptionYear>
@@ -48,7 +48,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
             <encoding>UTF-8</encoding>
             <maxmemory>512m</maxmemory>
             <links>
-              <link>http://docs.oracle.com/javase/6/docs/api/</link>
+              <link>http://docs.oracle.com/javase/7/docs/api/</link>
             </links>
           </configuration>
           <executions>
