--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: java
+
+# required for oraclejdk9
+dist: trusty
+
 # core streaming still builds on jdk6 and above:
 jdk:
-  - openjdk6
-  - oraclejdk7
-  - oraclejdk8
+  - oraclejdk9
 
 # Below this line is configuration for deploying to the Sonatype OSS repo
 # http://blog.xeiam.com/2013/05/configure-travis-ci-to-deploy-snapshots.html
