--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,15 @@
   <modelVersion>4.0.0</modelVersion> 
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
+    <!-- One of few Jackson modules that depend on parent and not jackson-bom -->
     <artifactId>jackson-parent</artifactId>
-    <version>2.9.pr1</version>
+    <version>2.9.pr1b</version>
   </parent>
 
    <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.9.0.pr2-SNAPSHOT</version>
+  <version>2.9.0.pr1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Core Jackson abstractions, basic JSON streaming API implementation</description>
   <inceptionYear>2008</inceptionYear>
