--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
    <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.9.0.pr2</version>
+  <version>2.9.0.pr3-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Core Jackson abstractions, basic JSON streaming API implementation</description>
   <inceptionYear>2008</inceptionYear>
@@ -20,7 +20,7 @@
     <connection>scm:git:git@github.com:FasterXML/jackson-core.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-core.git</developerConnection>
     <url>http://github.com/FasterXML/jackson-core</url>    
-    <tag>jackson-core-2.9.0.pr2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
