--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.fasterxml.jackson</groupId>
     <!-- One of few Jackson modules that depend on parent and not jackson-bom -->
     <artifactId>jackson-parent</artifactId>
-    <version>2.9.pr1b</version>
+    <version>2.9</version>
   </parent>
 
    <groupId>com.fasterxml.jackson.core</groupId>
