--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
     <groupId>com.fasterxml.jackson</groupId>
     <!-- One of few Jackson modules that depend on parent and not jackson-bom -->
     <artifactId>jackson-parent</artifactId>
-    <version>2.9.0</version>
+    <!-- need 2.9.1 to compile on Java 9; no other diffs from 2.9.0 -->
+    <version>2.9.1-SNAPSHOT</version>
   </parent>
 
-   <groupId>com.fasterxml.jackson.core</groupId>
+  <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
   <version>2.9.1-SNAPSHOT</version>
