Update `master` to be for 3.0

--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,13 @@
     <groupId>com.fasterxml.jackson</groupId>
     <!-- One of few Jackson modules that depend on parent and not jackson-bom -->
     <artifactId>jackson-parent</artifactId>
-    <!-- need 2.9.1 to compile on Java 9 -->
     <version>2.9.1</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.9.2-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
   <inceptionYear>2008</inceptionYear>
@@ -25,16 +24,8 @@
   </scm>
 
   <properties>
-    <!-- 16-Sep-2016, tatu: Retain Java6/JDK1.6 compatibility for streaming for Jackson 2.x -->
-    <javac.src.version>1.6</javac.src.version>
-    <javac.target.version>1.6</javac.target.version>
-
-    <!-- 04-May-2016, tatu: Bundle-plugin 3.x seems to require Java 7, so to
-           build for Java 6 need to downgrade here to last working 2.x version
-          (2.5.4 had some issues wrt shading)
+    <!-- 08-Sep-2017: could retain JDK6 compat even for 3.x, but let's not
       -->
-    <version.plugin.bundle>2.5.3</version.plugin.bundle>
-
     <osgi.export>com.fasterxml.jackson.core;version=${project.version},
 com.fasterxml.jackson.core.*;version=${project.version}
     </osgi.export>
@@ -57,14 +48,14 @@ com.fasterxml.jackson.core.*;version=${project.version}
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8.1</version>
           <configuration>
             <source>${javac.src.version}</source>
             <target>${javac.target.version}</target>
+	    <additionalparam>-Xdoclint:none</additionalparam>
             <encoding>UTF-8</encoding>
             <maxmemory>512m</maxmemory>
             <links>
-              <link>http://docs.oracle.com/javase/7/docs/api/</link>
+              <link>https://docs.oracle.com/javase/8/docs/api/</link>
             </links>
           </configuration>
           <executions>
@@ -116,46 +107,5 @@ com.fasterxml.jackson.core.*;version=${project.version}
       </plugin>
     </plugins>
   </build>
-
-  <reporting>
-    <plugins>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8.1</version>
-          <configuration>
-              <aggregate>true</aggregate>
-              <source>1.6</source>
-              <encoding>UTF-8</encoding>
-              <maxmemory>1g</maxmemory>
-              <links>
-                  <link>http://docs.oracle.com/javase/7/docs/api/</link>
-              </links>
-              <excludePackageNames>${javadoc.package.exclude}</excludePackageNames>
-              <bootclasspath>${sun.boot.class.path}</bootclasspath>
-              <doclet>com.google.doclava.Doclava</doclet>
-              <useStandardDocletOptions>false</useStandardDocletOptions>
-              <additionalJOption>-J-Xmx1024m</additionalJOption>
-              <docletArtifact>
-                  <groupId>com.google.doclava</groupId>
-                  <artifactId>doclava</artifactId>
-                  <version>1.0.3</version>
-              </docletArtifact>
-              <additionalparam>
-                  -hdf project.name "${project.name} ${project.version}"
-                  -d ${project.reporting.outputDirectory}/apidocs
-              </additionalparam>
-          </configuration>
-          <reportSets>
-              <reportSet>
-                  <id>default</id>
-                  <reports>
-                      <report>javadoc</report>
-                  </reports>
-              </reportSet>
-          </reportSets>
-      </plugin>
-    </plugins>
-  </reporting>
 
 </project>
