--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: java
-# core streaming still builds on jdk6 and above:
+# core streaming now requires Java 8
 jdk:
-  - openjdk6
-  - openjdk7
   - openjdk8
+  - openjdk9
 
 # Below this line is configuration for deploying to the Sonatype OSS repo
 # http://blog.xeiam.com/2013/05/configure-travis-ci-to-deploy-snapshots.html
@@ -15,6 +14,7 @@ branches:
   only:
     - master
     - "2.8"
+    - "2.9"
 
 # to make jdk6 work, as per: https://github.com/travis-ci/travis-ci/issues/8199
 addons:
